@@ -758,7 +758,15 @@
     <name>yarn.system-metrics-publisher.enabled</name>
     <value>false</value>
   </property>
- 
+
+  <property>
+    <description>The setting that controls whether yarn container metrics is
+    published to the timeline server or not by RM. This configuration setting is
+    for ATS V2.</description>
+    <name>yarn.rm.system-metrics-publisher.emit-container-events</name>
+    <value>false</value>
+  </property>
+
 
   <property>
     <description>Number of worker threads that send the yarn system metrics
@@ -1865,6 +1873,13 @@
     <description>Store file name for leveldb state store.</description>
     <name>yarn.timeline-service.leveldb-state-store.path</name>
     <value>${hadoop.tmp.dir}/yarn/timeline</value>
+  </property>
+
+  <property>
+    <description>The setting that controls how often the timeline collector
+    flushes the timeline writer.</description>
+    <name>yarn.timeline-service.writer.flush-interval-seconds</name>
+    <value>60</value>
   </property>
 
   <!--  Shared Cache Configuration -->
